--- a/layout/fragment_add.xml
+++ b/layout/fragment_add.xml
@@ -12,6 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Select Location"
+        android:textSize="19dp"
         tools:ignore="MissingConstraints" />
 
     <TextView
@@ -21,6 +22,7 @@
         android:layout_marginTop="8dp"
         android:layout_centerHorizontal="true"
         android:text=""
+        android:textAlignment="center"
         android:textSize="20dp"
         app:layout_constraintTop_toBottomOf="@+id/cl"
         tools:ignore="MissingConstraints" />
@@ -51,7 +53,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="@drawable/button1"
-            android:text="select image"
+            android:text="Select Image"
+            android:textSize="19dp"
             android:textAllCaps="false" />
 
         <Button
@@ -60,7 +63,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="@drawable/button2"
-            android:text="upload"
+            android:text="Upload"
+            android:textSize="18dp"
             app:layout_constraintStart_toStartOf="@id/cs" />
     </LinearLayout>
 
