--- a/layout/fragment_image.xml
+++ b/layout/fragment_image.xml
@@ -32,7 +32,7 @@
             android:layout_marginTop="30dp"
             android:layout_marginEnd="0dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/moon"
+            android:src="@drawable/jj"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -61,24 +61,30 @@
             app:layout_constraintStart_toStartOf="@id/button_favorite2"
             app:layout_constraintTop_toBottomOf="@+id/button_favorite2"/>
 
-        <EditText
-            android:id="@+id/editText"
-            android:layout_width="300dp"
-            android:layout_height="53dp"
-            android:layout_marginStart="10dp"
-            android:ems="10"
-            android:inputType="text"
-            android:text=""
-            app:layout_constraintStart_toStartOf="@id/likeCountTextView"
-            app:layout_constraintTop_toBottomOf="@+id/likeCountTextView" />
+        
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginTop="10dp">
+                <EditText
+                    android:id="@+id/editText"
+                    android:layout_width="320dp"
+                    android:layout_height="53dp"
+                    android:layout_marginStart="10dp"
+                    android:ems="10"
+                    android:inputType="text"
+                    android:text=""
+                    app:layout_constraintStart_toStartOf="@id/likeCountTextView"
+                    app:layout_constraintTop_toBottomOf="@+id/likeCountTextView" />
 
-        <Button
-            android:id="@+id/upload"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:text="게시"
-            android:onClick="clickComment"/>
+                <Button
+                    android:id="@+id/upload"
+                    android:layout_width="40dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:background="@drawable/done"/>
+            </LinearLayout>
 
         <TextView
             android:id="@+id/tv"
@@ -125,24 +131,31 @@
             app:layout_constraintStart_toStartOf="@id/button_favorite3"
             app:layout_constraintTop_toBottomOf="@+id/button_favorite3"/>
 
-        <EditText
-            android:id="@+id/editTextt"
-            android:layout_width="300dp"
-            android:layout_height="53dp"
-            android:layout_marginStart="10dp"
-            android:ems="10"
-            android:inputType="text"
-            android:text=""
-            app:layout_constraintStart_toStartOf="@id/button_favorite2"
-            app:layout_constraintTop_toBottomOf="@+id/button_favorite2" />
-
-        <Button
-            android:id="@+id/uploadd"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:text="게시"
-            android:onClick="clickComment"/>
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp">
+
+            <EditText
+                android:id="@+id/editTextt"
+                android:layout_width="320dp"
+                android:layout_height="53dp"
+                android:layout_marginStart="10dp"
+                android:ems="10"
+                android:inputType="text"
+                android:text=""
+                app:layout_constraintStart_toStartOf="@id/button_favorite2"
+                app:layout_constraintTop_toBottomOf="@+id/button_favorite2" />
+
+            <Button
+                android:id="@+id/uploadd"
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:background="@drawable/done"/>
+        </LinearLayout>
+
 
         <TextView
             android:id="@+id/tv2"
@@ -189,24 +202,30 @@
             app:layout_constraintStart_toStartOf="@id/button_favorite2"
             app:layout_constraintTop_toBottomOf="@+id/button_favorite2"/>
 
-        <EditText
-            android:id="@+id/editTexttt"
-            android:layout_width="300dp"
-            android:layout_height="53dp"
-            android:layout_marginStart="10dp"
-            android:ems="10"
-            android:inputType="text"
-            android:text=""
-            app:layout_constraintStart_toStartOf="@id/button_favorite2"
-            app:layout_constraintTop_toBottomOf="@+id/button_favorite2" />
-
-        <Button
-            android:id="@+id/uploaddd"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:text="게시"
-            android:onClick="clickComment"/>
+            android:orientation="horizontal"
+            android:layout_marginTop="10dp">
+
+            <EditText
+                android:id="@+id/editTexttt"
+                android:layout_width="320dp"
+                android:layout_height="53dp"
+                android:layout_marginStart="10dp"
+                android:ems="10"
+                android:inputType="text"
+                android:text=""
+                app:layout_constraintStart_toStartOf="@id/button_favorite2"
+                app:layout_constraintTop_toBottomOf="@+id/button_favorite2" />
+
+            <Button
+                android:id="@+id/uploaddd"
+                android:layout_width="40dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:background="@drawable/done" />
+        </LinearLayout>
 
         <TextView
             android:id="@+id/tv3"
