--- a/layout/fragment_account.xml
+++ b/layout/fragment_account.xml
@@ -44,6 +44,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="32dp"
         android:text="Log Out"
+        android:backgroundTint="@color/blue"
         android:textColor="#FFFFFF" />
 
 
